--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -6,11 +6,20 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  padding: 1.5rem 2.5rem 1.5rem 2.5rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
   z-index: 1;
 }
 
-.footer-container {
+.footer-wrapper {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  font-family: $secondary_font;
+}
+
+.footer-content {
   color: $secondary_color;
   font-family: $secondary_font;
 }
