--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,22 +1,12 @@
 @import "../../styles/colors.scss";
 @import "../../styles/fonts.scss";
+@import "../../styles/spacing.scss";
 
 .footer {
   position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+  bottom: calc($padding * 2);
+  right: calc($padding * 3);
   z-index: 1;
-}
-
-.footer-wrapper {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  display: flex;
-  justify-content: space-between;
-  font-family: $secondary_font;
 }
 
 .footer-content {
