--- a/src/components/PageLoad/PageLoad.scss
+++ b/src/components/PageLoad/PageLoad.scss
@@ -20,9 +20,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #0c0c0c;
+  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/86186/crt.png"),
+    linear-gradient(to bottom, #181818 0%, #1b1b1b 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   animation: fadeOutPage 3s ease-out forwards;
-  z-index: 3;
+  z-index: 2;
 }
 
 .page-load-text {
@@ -48,7 +51,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  border-radius: 50%;
+  border-radius: 20%;
   background-color: $secondary_color;
   animation: tvOn 0.8s linear forwards;
   animation-delay: 2s;
@@ -93,14 +96,17 @@
 @keyframes tvOn {
   0% {
     transform: scale(1, 0.01);
+    filter: brightness(4);
     opacity: 1;
   }
   90% {
     transform: scale(1, 0.01);
+    filter: brightness(4);
     opacity: 1;
   }
   100% {
     transform: scale(1, 1);
+    filter: contrast(1) brightness(1.2) saturate(1.3);
     opacity: 0;
   }
 }
