--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,9 +3,8 @@
 @import "../../styles/spacing.scss";
 
 .footer {
-  position: fixed;
-  bottom: calc($padding * 2);
-  right: calc($padding * 3);
+  position: relative;
+  padding: (calc($padding * 2));
   z-index: 1;
 }
 
