--- a/src/main.scss
+++ b/src/main.scss
@@ -4,14 +4,53 @@ body {
   margin: 0;
 }
 
-#page {
+::-webkit-scrollbar {
+  width: 6px;
+  background-color: white;
+  -webkit-border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: black;
+}
+
+::-webkit-scrollbar:hover {
+  background-color: rgb(46, 46, 46);
+}
+
+::-webkit-scrollbar-thumb:vertical {
+  background: rgb(46, 46, 46);
+  -webkit-border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:vertical:active {
+  background: rgb(61, 61, 61);
+  -webkit-border-radius: 10px;
+}
+
+#border {
+  position: fixed;
+  width: 100%;
   height: 100vh;
-  background-color: #1c1e1d;
-  color: #fbfbfb;
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/86186/crt.png"),
-    linear-gradient(to bottom, #85908c 0%, #323431 100%);
+  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/86186/crt.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
+  pointer-events: none;
+  z-index: 2;
+}
+
+#effects {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(to bottom, #85908c 0%, #323431 100%);
+  background-repeat: no-repeat;
+  pointer-events: none;
+}
+
+#page {
+  height: 100vh;
+  color: #fbfbfb;
 }
 
 .retro-effects::before {
