Rearranged layout of TV

--- a/src/Page/Page.scss
+++ b/src/Page/Page.scss
@@ -1,8 +1,22 @@
+@import "../styles/spacing.scss";
+
 .content-container {
   display: flex;
+  flex-direction: column;
+  position: fixed;
+  width: $screen_size_width;
+  height: $screen_size_height;
+  box-sizing: border-box;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+}
+
+.main-container {
+  display: flex;
   position: relative;
-  width: 100%;
-  height: 100%;
   justify-content: center;
   align-items: center;
+  flex-grow: 1;
 }
