--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,9 +3,10 @@
 @import "../../styles/spacing.scss";
 
 .header-container {
+  display: flex;
   position: relative;
-  padding: (calc($padding * 2));
-  z-index: 1;
+  justify-content: center;
+  align-items: center;
 }
 
 .name-heading {
