--- a/src/components/PageLoad/PageLoad.scss
+++ b/src/components/PageLoad/PageLoad.scss
@@ -1,12 +1,15 @@
 @import "../../styles/colors.scss";
 @import "../../styles/fonts.scss";
+@import "../../styles/spacing.scss";
 
 .loading-container {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  width: $screen_size_width;
+  height: $screen_size_height;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
   overflow: hidden;
   display: flex;
   justify-content: center;
