--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,5 @@
 @import "./styles/colors.scss";
+@import "./styles/spacing.scss";
 
 body {
   margin: 0;
@@ -26,63 +27,4 @@ body {
 ::-webkit-scrollbar-thumb:vertical:active {
   background: rgb(61, 61, 61);
   -webkit-border-radius: 10px;
-}
-
-#border {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/86186/crt.png");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  pointer-events: none;
-  z-index: 2;
-}
-
-#effects {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  background: linear-gradient(to bottom, #85908c 0%, #323431 100%);
-  background-repeat: no-repeat;
-  pointer-events: none;
-}
-
-#page {
-  height: 100vh;
-  color: #fbfbfb;
-}
-
-.retro-effects::before {
-  content: " ";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%),
-    linear-gradient(
-      90deg,
-      rgba(255, 0, 0, 0.06),
-      rgba(0, 255, 0, 0.02),
-      rgba(0, 0, 255, 0.06)
-    );
-  z-index: 2;
-  background-size: 100% 2px, 3px 100%;
-  pointer-events: none;
-}
-
-.retro-effects::after {
-  content: " ";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background: rgba(18, 16, 16, 0.1);
-  opacity: 0;
-  z-index: 2;
-  pointer-events: none;
 }
