--- a/src/Page/Page.scss
+++ b/src/Page/Page.scss
@@ -1,4 +1,5 @@
 @import "../styles/spacing.scss";
+@import "../styles/colors.scss";
 
 .content-container {
   display: flex;
@@ -11,6 +12,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   overflow: hidden;
+  padding: $padding;
 }
 
 .main-container {
@@ -19,4 +21,5 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
+  color: $secondary_color;
 }
