--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,12 +5,14 @@
 .header-container {
   display: flex;
   position: relative;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .name-heading {
   font-family: $primary_font;
+  color: $secondary_color;
   font-size: 6em;
   letter-spacing: 1.6px;
   font-weight: 400;
@@ -20,6 +22,7 @@
 .short-description {
   margin: 0;
   font-family: $primary_font;
+  color: $secondary_color;
   font-size: 2em;
   font-weight: 200;
 }
