--- a/src/components/PageLoad/PageLoad.scss
+++ b/src/components/PageLoad/PageLoad.scss
@@ -24,7 +24,7 @@
   justify-content: center;
   align-items: center;
   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/86186/crt.png"),
-    linear-gradient(to bottom, #181818 0%, #1b1b1b 100%);
+    linear-gradient(to bottom, #060606 0%, #141414 100%);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   animation: fadeOutPage 3s ease-out forwards;
@@ -52,8 +52,8 @@
 
 .TV-on {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: $screen_size_width;
+  height: $screen_size_height;
   border-radius: 20%;
   background-color: $secondary_color;
   animation: tvOn 0.8s linear forwards;
