--- a/src/components/TV/TV.scss
+++ b/src/components/TV/TV.scss
@@ -10,59 +10,107 @@
 }
 
 .tv__details {
-  width: 80%;
-  display: flex;
-  justify-content: space-between;
+  width: 90%;
   position: fixed;
-  bottom: 1%;
+  bottom: 2%;
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
 
 .tv__info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex: 1;
+  text-align: center;
 }
 
 .tv__info h3 {
+  color: #b5b6b0;
   margin-bottom: 0;
   margin-top: 0;
+  font-size: 1.4rem;
 }
 
-.tv__controls button {
-  width: 15px;
-  height: 15px;
+.tv__controls {
+  position: absolute;
+  right: 0;
+  display: flex;
+  align-items: center;
+}
+
+.power-icon {
+  height: 12px;
+  width: 12px;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 4px;
+}
+
+.power-light {
+  height: 6px;
+  width: 6px;
   border-radius: 50%;
-  background: #999;
+  box-shadow: 0 0 4px 2px #000000, 0 0 14px 2px #030303, 0 0 9px 2px #000;
+  background-color: #000000;
+  margin-bottom: 6px;
+  animation: powerLightOn 0.2s linear forwards;
+  animation-delay: 2.5s;
 }
 
-.tv__audio {
-  height: 50px;
-  width: 30%;
+.power-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 40px;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 10px;
+}
+
+.tv-button {
+  border-radius: 50%;
+  background-color: #424140;
+  width: 34px;
+  height: 34px;
+  border: 1px solid;
+  box-shadow: inset 0px 0px 8px black;
+  margin-bottom: 6px;
+}
+
+.tv-button:active {
+  background-color: #404040;
+  border: 1px solid;
+  box-shadow: inset 2px 2px 21px black;
+}
+
+.button-shine {
   position: relative;
-  border-radius: 2px;
-  background-color: #555;
-  background-image: linear-gradient(
-      45deg,
-      #666 25%,
-      transparent 25% 75%,
-      #666 75%
-    ),
-    linear-gradient(-45deg, #666 25%, transparent 25% 75%, #666 75%);
-  background-size: 5px 5px;
+}
+
+.button-shine::after {
+  content: "";
+  position: absolute;
+  height: 16px;
+  width: 13px;
+  border-radius: 100%;
+  border: 0 solid #686868;
+  border-width: 0 3px 0 0;
+  top: -8px;
+  left: 3px;
+}
+
+.effects-button-label {
+  color: #b5b6b0;
 }
 
 #tv-border {
   position: fixed;
   height: 100%;
   width: 100%;
-  background: linear-gradient(
-    178deg,
-    rgba(48, 48, 48, 1) 0%,
-    rgb(118 118 118) 100%,
-    rgb(84 84 84) 100%
-  );
+  background: linear-gradient(178deg, #141414 0%, #141414 100%);
   display: flex;
   justify-content: center;
   pointer-events: none;
@@ -139,4 +187,13 @@
   -webkit-box-shadow: inset 0 0 10px #000;
   -moz-box-shadow: inset 0 0 10px #000;
   box-shadow: inset 0 0 10px #000;
+}
+
+@keyframes powerLightOn {
+  0% {
+  }
+  100% {
+    box-shadow: 0 0 4px 2px #fff, 0 0 14px 2px #f00, 0 0 9px 2px #f00;
+    background-color: #fff;
+  }
 }
