--- a/src/components/PageLoad/PageLoad.scss
+++ b/src/components/PageLoad/PageLoad.scss
@@ -9,7 +9,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border-radius: 10px;
+  border-radius: 20px;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -27,7 +27,7 @@
     linear-gradient(to bottom, #060606 0%, #141414 100%);
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  animation: fadeOutPage 3s ease-out forwards;
+  animation: fadeOutPage 4s ease-out forwards;
   z-index: 2;
 }
 
@@ -41,42 +41,31 @@
 }
 
 .text-1 {
-  font-weight: 400;
-  animation: fadeOutText1 2s ease-out forwards;
-}
-
-.text-2 {
   font-weight: 200;
-  animation: fadeOutText2 2.3s ease-out forwards;
+  overflow: hidden;
+  color: green;
+  border-right: 0.1em solid green;
+  white-space: nowrap;
+  width: 0;
+  animation: typing 2s steps(20, end) forwards, blink 0.8s infinite,
+    fadeOutText1 3.6s linear forwards;
 }
 
 .TV-on {
   position: absolute;
   width: $screen_size_width;
   height: $screen_size_height;
-  border-radius: 20%;
-  background-color: $secondary_color;
+  border-radius: 20px;
+  background-color: #fff;
   animation: tvOn 0.8s linear forwards;
-  animation-delay: 2s;
+  animation-delay: 3s;
 }
 
 @keyframes fadeOutText1 {
   0% {
     opacity: 1;
   }
-  70% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-@keyframes fadeOutText2 {
-  0% {
-    opacity: 1;
-  }
-  80% {
+  99% {
     opacity: 1;
   }
   100% {
@@ -99,17 +88,32 @@
 @keyframes tvOn {
   0% {
     transform: scale(1, 0.01);
-    filter: brightness(4);
     opacity: 1;
   }
-  90% {
+  80% {
     transform: scale(1, 0.01);
-    filter: brightness(4);
     opacity: 1;
   }
   100% {
     transform: scale(1, 1);
-    filter: contrast(1) brightness(1.2) saturate(1.3);
     opacity: 0;
+  }
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes blink {
+  from {
+    border-color: transparent;
+  }
+  to {
+    border-color: green;
   }
 }
