--- a/src/components/TV/TV.scss
+++ b/src/components/TV/TV.scss
@@ -12,15 +12,16 @@
 .tv__details {
   width: 90%;
   position: fixed;
-  bottom: 2%;
+  bottom: 0.5%;
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
 .tv__info {
-  flex: 1;
   text-align: center;
+  flex: 1;
+  display: flex;
+  justify-content: center;
 }
 
 .tv__info h3 {
@@ -30,11 +31,28 @@
   font-size: 1.4rem;
 }
 
+.tv__audio {
+  height: 30px;
+  width: 20%;
+  border-radius: 30px;
+  background-image: linear-gradient(
+      45deg,
+      #242424 25%,
+      transparent 25% 75%,
+      #161616 75%
+    ),
+    linear-gradient(-45deg, #282828 25%, transparent 25% 75%, #000 75%);
+  background-size: 5px 5px;
+  flex: 1;
+}
+
 .tv__controls {
-  position: absolute;
+  position: relative;
   right: 0;
-  display: flex;
   align-items: center;
+  flex: 1;
+  display: flex;
+  justify-content: end;
 }
 
 .power-icon {
@@ -67,7 +85,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 10px;
+  margin: 0 14px;
 }
 
 .tv-button {
@@ -96,7 +114,7 @@
   height: 16px;
   width: 13px;
   border-radius: 100%;
-  border: 0 solid #686868;
+  border: 0 solid #505050;
   border-width: 0 3px 0 0;
   top: -8px;
   left: 3px;
@@ -128,10 +146,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 10px #000;
-  -moz-box-shadow: inset 0 0 10px #000;
-  box-shadow: inset 0 0 10px #000;
+  border-radius: 20px;
+  border: 1px solid;
 }
 
 #effects {
@@ -144,7 +160,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border-radius: 10px;
+  border-radius: 20px;
 }
 
 .retro-effects::before {
@@ -165,10 +181,7 @@
   z-index: 2;
   background-size: 100% 2px, 3px 100%;
   pointer-events: none;
-  border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 10px #000;
-  -moz-box-shadow: inset 0 0 10px #000;
-  box-shadow: inset 0 0 10px #000;
+  border-radius: 20px;
 }
 
 .retro-effects::after {
@@ -183,10 +196,7 @@
   opacity: 0;
   z-index: 2;
   pointer-events: none;
-  border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 10px #000;
-  -moz-box-shadow: inset 0 0 10px #000;
-  box-shadow: inset 0 0 10px #000;
+  border-radius: 20px;
 }
 
 @keyframes powerLightOn {
@@ -195,5 +205,14 @@
   100% {
     box-shadow: 0 0 4px 2px #fff, 0 0 14px 2px #f00, 0 0 9px 2px #f00;
     background-color: #fff;
+  }
+}
+
+@keyframes textflicker {
+  from {
+    text-shadow: 1px 0 0 #ea36af, -2px 0 0 #75fa69;
+  }
+  to {
+    text-shadow: 2px 0.5px 2px #ea36af, -1px -0.5px 2px #75fa69;
   }
 }
