--- a/src/components/PageLoad/PageLoad.scss
+++ b/src/components/PageLoad/PageLoad.scss
@@ -31,6 +31,27 @@
   z-index: 2;
 }
 
+.page-load::before {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%),
+    linear-gradient(
+      90deg,
+      rgba(255, 0, 0, 0.06),
+      rgba(0, 255, 0, 0.02),
+      rgba(0, 0, 255, 0.06)
+    );
+  z-index: 2;
+  background-size: 100% 2px, 3px 100%;
+  pointer-events: none;
+  border-radius: 20px;
+}
+
 .page-load-text {
   display: flex;
   color: $secondary_color;
@@ -38,6 +59,7 @@
   font-size: 2em;
   gap: 16px;
   letter-spacing: 1.6px;
+  text-shadow: 0 0 8px green;
 }
 
 .text-1 {
