--- a/src/components/PageLoad/PageLoad.module.scss
+++ b/src/components/PageLoad/PageLoad.module.scss
@@ -1,8 +1,7 @@
 @import "../../styles/colors.scss";
-@import "../../styles/fonts.scss";
 @import "../../styles/spacing.scss";
 
-.loading-container {
+.loadingContainer {
   position: fixed;
   width: $screen_size_width;
   height: $screen_size_height;
@@ -17,7 +16,7 @@
   z-index: 2;
 }
 
-.page-load {
+.pageLoad {
   width: 100%;
   height: 100%;
   display: flex;
@@ -31,7 +30,7 @@
   z-index: 2;
 }
 
-.page-load::before {
+.pageLoad::before {
   content: " ";
   display: block;
   position: absolute;
@@ -52,17 +51,16 @@
   border-radius: 20px;
 }
 
-.page-load-text {
+.pageLoadText {
   display: flex;
   color: $secondary_color;
-  font-family: $primary_font;
   font-size: 2em;
   gap: 16px;
   letter-spacing: 1.6px;
   text-shadow: 0 0 8px green;
 }
 
-.text-1 {
+.textOne {
   font-weight: 200;
   overflow: hidden;
   color: green;
@@ -70,10 +68,10 @@
   white-space: nowrap;
   width: 0;
   animation: typing 2.5s steps(32, end) forwards, blink 0.8s infinite,
-    fadeOutText1 3.6s linear forwards;
+    fadeOutText 3.6s linear forwards;
 }
 
-.TV-on {
+.tvOn {
   position: absolute;
   width: 99%;
   height: 99%;
@@ -83,7 +81,7 @@
   animation-delay: 3s;
 }
 
-@keyframes fadeOutText1 {
+@keyframes fadeOutText {
   0% {
     opacity: 1;
   }
