--- a/src/pages/ProjectsPage.module.scss
+++ b/src/pages/ProjectsPage.module.scss
@@ -1,19 +1,21 @@
 @import "../styles/spacing.scss";
 @import "../styles/colors.scss";
+@import "../styles/spacing.scss";
 
-.page-container {
+.pageContainer {
   flex: 1;
   display: flex;
   align-items: center;
   flex-direction: column;
   border-radius: 20px;
   padding: $padding;
+  align-self: stretch;
 }
 
-.main-container {
+.mainContainer {
   display: flex;
   position: relative;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   flex-grow: 1;
   color: $secondary_color;
