--- a/src/components/Pong/Pong.module.scss
+++ b/src/components/Pong/Pong.module.scss
@@ -47,7 +47,7 @@
   display: block;
   background: #3f3;
   border-radius: 50%;
-  transform: translate3d(10px, 0, 0);
+  transform: translate3d(20px, 25px, 0);
   animation: leftright 4s infinite alternate linear;
 }
 
@@ -57,6 +57,7 @@
   position: absolute;
   width: 7px;
   height: 6%;
+  transform: translate(0, -40%);
 }
 
 .playerOne {
@@ -65,7 +66,6 @@
 
 .playerTwo {
   right: 1%;
-  animation-delay: 2.1s;
 }
 
 @keyframes leftright {
