--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,11 +1,20 @@
 @import "../../styles/colors.scss";
 
+.tvDetailsWrapper {
+  width: 100%;
+  height: 7%;
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(178deg, #141414 0%, #141414 100%);
+}
+
 .tvDetails {
   width: 90%;
-  position: relative;
   display: flex;
+  justify-content: center;
   align-items: center;
-  margin-bottom: 1.5vh;
 }
 
 .tvInfo {
