--- a/src/pages/LandingPage.module.scss
+++ b/src/pages/LandingPage.module.scss
@@ -1,5 +1,6 @@
 @import "../styles/spacing.scss";
 @import "../styles/colors.scss";
+@import "../styles/fonts.scss";
 
 .pageContainer {
   flex: 1;
@@ -9,6 +10,7 @@
   border-radius: 20px;
   padding: $padding;
   align-self: stretch;
+  pointer-events: all;
 }
 
 .mainContainer {
@@ -21,17 +23,51 @@
   width: 100%;
 }
 
+.contentContainer {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  text-align: center;
+  flex: 1;
+}
+
 .headingContainer {
   width: 100%;
   height: 100%;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .heading {
-  font-size: 5rem;
+  font-size: 3.4rem;
   text-transform: uppercase;
+  margin: 0;
+  margin-top: 20px;
+  text-align: center;
 }
 
 .subHeading {
-  font-size: 1.2rem;
+  font-family: $primary_font;
+  font-size: 1.4rem;
+}
+
+.textContainer {
+  flex: 1;
+  justify-content: center;
+  display: flex;
+}
+
+.innerTextContainer {
+  width: 75%;
+  text-align: left;
+}
+
+.imageContainer {
+  flex: 1;
+}
+
+.profileImage {
+  width: 40%;
+  border-radius: 50%;
 }
