--- a/src/pages/LandingPage.module.scss
+++ b/src/pages/LandingPage.module.scss
@@ -25,7 +25,7 @@
 
 .contentContainer {
   display: flex;
-  width: 100%;
+  width: 70%;
   align-items: center;
   text-align: center;
   flex: 1;
@@ -36,6 +36,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -50,6 +51,8 @@
 .subHeading {
   font-family: $primary_font;
   font-size: 1.4rem;
+  margin: 0;
+  margin-bottom: 16px;
 }
 
 .textContainer {
@@ -61,6 +64,14 @@
 .innerTextContainer {
   width: 75%;
   text-align: left;
+  background-color: #1e1e1e;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 4px black;
+}
+
+.contentText {
+  margin: 0;
 }
 
 .imageContainer {
