--- a/src/components/UI/ClickableIcon.module.scss
+++ b/src/components/UI/ClickableIcon.module.scss
@@ -7,4 +7,9 @@
   width: 40px;
   height: 40px;
   fill: #fdfdfd;
+  transition: 0.2s;
+}
+
+.clickableIconImage:hover {
+  fill: rgb(182, 182, 182);
 }
