--- a/src/components/UI/Project.module.scss
+++ b/src/components/UI/Project.module.scss
@@ -15,6 +15,7 @@
   padding: 20px;
   box-shadow: 0 0 4px black;
   flex-direction: column;
+  text-align: center;
 }
 
 .projectImage {
@@ -41,10 +42,16 @@
   margin: 10px 0 10px 0;
 }
 
-.projectGithub {
+.button {
   margin: 0 10px 0 10px;
+  background-color: white;
+  text-decoration: none;
+  color: black;
+  padding: 10px;
+  border-radius: 10px;
+  transition: 0.2s;
 }
 
-.projectLive {
-  margin: 0 10px 0 10px;
+.button:hover {
+  background-color: rgb(182, 182, 182);
 }
