--- a/src/components/UI/Project.module.scss
+++ b/src/components/UI/Project.module.scss
@@ -8,21 +8,25 @@
   justify-content: center;
   align-items: center;
   height: 70%;
-  background-color: #1e1e1e;
   color: $secondary_color;
-  border-radius: 10px;
+  border-radius: 4px;
   margin: 10px;
   padding: 20px;
-  box-shadow: 0 0 4px black;
   flex-direction: column;
   text-align: center;
+
+  background: rgba(255, 255, 255, 0.06);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(3.8px);
+  -webkit-backdrop-filter: blur(3.8px);
+  border: 1px solid rgba(255, 255, 255, 0.46);
 }
 
 .projectImage {
   flex: 1;
   width: 100%;
   object-fit: cover;
-  border-radius: 10px;
+  border-radius: 4px;
 }
 
 .projectTitle {
@@ -50,7 +54,7 @@
   text-decoration: none;
   color: black;
   padding: 10px;
-  border-radius: 10px;
+  border-radius: 4px;
   transition: 0.2s;
   font-weight: bold;
   font-size: 0.8rem;
