--- a/src/pages/LandingPage.module.scss
+++ b/src/pages/LandingPage.module.scss
@@ -64,10 +64,14 @@
 .innerTextContainer {
   width: 75%;
   text-align: left;
-  background-color: #1e1e1e;
   padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 4px black;
+  border-radius: 4px;
+
+  background: rgba(255, 255, 255, 0.06);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(3.8px);
+  -webkit-backdrop-filter: blur(3.8px);
+  border: 1px solid rgba(255, 255, 255, 0.46);
 }
 
 .contentText {
