--- a/src/components/UI/Project.module.scss
+++ b/src/components/UI/Project.module.scss
@@ -23,7 +23,7 @@
 }
 
 .projectImage {
-  flex: 1 200px;
+  flex: 1;
   width: 100%;
   object-fit: cover;
   border-radius: 4px;
@@ -34,12 +34,13 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 40%;
+  height: 50%;
 }
 
 .projectTitle {
   font-size: 1.4rem;
-  margin: 10px 0 10px 0;
+  margin: 0;
+  margin-top: 10px;
 }
 
 .projectStack {
@@ -53,7 +54,8 @@
 
 .buttonWrapper {
   display: flex;
-  margin: 10px 0 10px 0;
+  margin: 0;
+  margin-top: 10px;
 }
 
 .button {
