--- a/src/components/Forms/ContactForm.module.scss
+++ b/src/components/Forms/ContactForm.module.scss
@@ -130,6 +130,12 @@
   cursor: pointer;
 }
 
+.submitButtonSending {
+  pointer-events: none;
+  background-color: rgb(182, 182, 182);
+  color: grey;
+}
+
 .submitButton:hover {
   background-color: rgb(182, 182, 182);
 }
