--- a/src/components/UI/Project.module.scss
+++ b/src/components/UI/Project.module.scss
@@ -7,8 +7,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80%;
-  color: $secondary_color;
+  height: auto;
+  min-height: 450px;
+  color: #fbfbfb;
   border-radius: 4px;
   margin: 10px;
   padding: 20px;
@@ -16,14 +17,16 @@
   text-align: center;
 
   background: rgba(255, 255, 255, 0.06);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 30px rgb(0 0 0 / 10%);
   backdrop-filter: blur(3.8px);
   -webkit-backdrop-filter: blur(3.8px);
   border: 1px solid rgba(255, 255, 255, 0.46);
 }
 
+.projectImageContainer {
+}
+
 .projectImage {
-  flex: 1;
   width: 100%;
   object-fit: cover;
   border-radius: 4px;
@@ -31,6 +34,7 @@
 
 .projectContent {
   display: flex;
+  flex: 1;
   justify-content: center;
   align-items: center;
   flex-direction: column;
