--- a/src/components/UI/Project.module.scss
+++ b/src/components/UI/Project.module.scss
@@ -9,6 +9,8 @@
   align-items: center;
   height: auto;
   min-height: 450px;
+  max-width: 400px;
+  min-width: 260px;
   color: #fbfbfb;
   border-radius: 4px;
   margin: 10px;
