--- a/src/pages/LandingPage.module.scss
+++ b/src/pages/LandingPage.module.scss
@@ -28,7 +28,6 @@
   width: 70%;
   align-items: center;
   text-align: center;
-  flex: 1;
 }
 
 .headingContainer {
@@ -84,5 +83,6 @@
 
 .profileImage {
   width: 40%;
+  max-width: 400px;
   border-radius: 50%;
 }
