--- a/src/pages/ProjectsPage.module.scss
+++ b/src/pages/ProjectsPage.module.scss
@@ -16,7 +16,7 @@
 .mainContainer {
   display: flex;
   position: relative;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-grow: 1;
   color: $secondary_color;
