--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,9 +4,9 @@
 .contentContainer {
   display: flex;
   flex-direction: column;
-  position: fixed;
-  width: $screen_size_width;
-  height: $screen_size_height;
+  position: relative;
+  width: 100%;
+  height: 100%;
   box-sizing: border-box;
   top: 50%;
   left: 50%;
@@ -16,6 +16,19 @@
   align-items: center;
   border-radius: 20px;
   background: radial-gradient(circle at center, #222, black 90%) no-repeat;
+}
+
+#borderEffect {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/86186/crt.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  z-index: 2;
+  border-radius: 20px;
+  border: 1px solid;
+  pointer-events: none;
 }
 
 .retroEffects::before {
