--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,7 +2,9 @@
 
 .tvDetailsWrapper {
   width: 100%;
-  height: 7%;
+  height: auto;
+  padding: 10px;
+  padding-top: 0;
   display: flex;
   position: relative;
   align-items: center;
@@ -98,5 +100,23 @@
   100% {
     box-shadow: 0 0 4px 2px #fff, 0 0 14px 2px #f00, 0 0 9px 2px #f00;
     background-color: #fff;
+  }
+}
+
+@media only screen and (max-width: 930px) {
+  .tvDetails {
+    width: 100%;
+  }
+
+  .tvAudio {
+    display: none;
+  }
+
+  .tvInfo {
+    display: none;
+  }
+
+  .tvControls {
+    justify-content: center;
   }
 }
