--- a/src/components/PageLoad/PageLoad.module.scss
+++ b/src/components/PageLoad/PageLoad.module.scss
@@ -1,22 +1,8 @@
 @import "../../styles/colors.scss";
 @import "../../styles/spacing.scss";
 
-.loadingContainer {
-  position: fixed;
-  width: $screen_size_width;
-  height: $screen_size_height;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 20px;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 2;
-}
-
 .pageLoad {
+  position: absolute;
   width: 100%;
   height: 100%;
   display: flex;
