--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,7 +4,6 @@
   width: 100%;
   height: auto;
   padding: 10px;
-  padding-top: 0;
   display: flex;
   position: relative;
   align-items: center;
@@ -104,6 +103,10 @@
 }
 
 @media only screen and (max-width: 930px) {
+  .tvDetailsWrapper {
+    padding-top: 0;
+  }
+
   .tvDetails {
     width: 100%;
   }
