--- a/src/components/Pong/Pong.module.scss
+++ b/src/components/Pong/Pong.module.scss
@@ -35,21 +35,25 @@
 }
 
 .horizontal {
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: 100%;
   animation: smoothbounceball 3s infinite alternate linear;
 }
 
+.ballWrapper {
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  animation: leftright 4s infinite alternate linear;
+}
+
 .ball {
-  position: fixed;
+  position: absolute;
   width: 14px;
   height: 14px;
-  display: block;
   background: #3f3;
   border-radius: 50%;
-  transform: translate3d(20px, 25px, 0);
-  animation: leftright 4s infinite alternate linear;
 }
 
 .playerOne,
@@ -71,10 +75,10 @@
 
 @keyframes leftright {
   from {
-    transform: translate(1vw, 0);
+    transform: translate(21px, 0);
   }
   to {
-    transform: translate(92vw, 0);
+    transform: translate(calc(100% - 42px), 0);
   }
 }
 
