Changed padding for mobile optimisaiton

--- a/src/pages/ContactPage.module.scss
+++ b/src/pages/ContactPage.module.scss
@@ -82,11 +82,11 @@
     max-width: unset;
     width: 100%;
     flex: none;
-    margin-bottom: 40px;
   }
 
   .innerTextContainer {
     width: 100%;
+    padding: 10px;
   }
 
   .subHeading {
