--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,4 +1,5 @@
 @import "./styles/spacing.scss";
+@import "./styles/media-sizes.scss";
 @import "./styles/colors.scss";
 
 .contentContainer {
@@ -50,4 +51,10 @@
   z-index: 2;
   background-size: 100% 2px, 3px 100%;
   border-radius: 20px;
+}
+
+@media only screen and (max-width: $tablet) {
+  .contentContainer {
+    overflow: visible;
+  }
 }
