--- a/src/components/PageLoad/PageLoad.module.scss
+++ b/src/components/PageLoad/PageLoad.module.scss
@@ -1,5 +1,6 @@
 @import "../../styles/colors.scss";
 @import "../../styles/spacing.scss";
+@import "../../styles/media-sizes.scss";
 
 .pageLoad {
   position: absolute;
@@ -14,6 +15,7 @@
   background-size: 100% 100%;
   animation: fadeOutPage 4s ease-out forwards;
   z-index: 2;
+  border-radius: 20px;
 }
 
 .pageLoad::before {
@@ -122,7 +124,7 @@
   }
 }
 
-@media only screen and (max-width: 930px) {
+@media only screen and (max-width: $tablet) {
   .textOne {
     font-size: 0.7rem;
   }
