--- a/src/components/Pong/Pong.module.scss
+++ b/src/components/Pong/Pong.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/spacing.scss";
+@import "../../styles/media-sizes.scss";
 
 .court {
   position: fixed;
@@ -84,14 +85,14 @@
 
 @keyframes smoothbounceball {
   from {
-    transform: translate(0, 0);
+    transform: translate(0, 5%);
   }
   to {
-    transform: translate(0, 100%);
+    transform: translate(0, 95%);
   }
 }
 
-@media only screen and (max-width: 930px) {
+@media only screen and (max-width: $tablet) {
   @keyframes leftright {
     from {
       transform: translate(1%, 0);
