Changed text size and footer icon size/margin

--- a/src/components/Pong/Pong.module.scss
+++ b/src/components/Pong/Pong.module.scss
@@ -2,7 +2,7 @@
 @import "../../styles/media-sizes.scss";
 
 .court {
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: 100%;
   top: 50%;
