--- a/src/components/UI/Project.module.scss
+++ b/src/components/UI/Project.module.scss
@@ -1,6 +1,7 @@
 @import "../../styles/spacing.scss";
 @import "../../styles/colors.scss";
 @import "../../styles/fonts.scss";
+@import "../../styles/media-sizes.scss";
 
 .projectCard {
   flex: 1;
@@ -8,7 +9,7 @@
   justify-content: center;
   align-items: center;
   height: auto;
-  min-height: 450px;
+  min-height: 400px;
   max-width: 400px;
   min-width: 260px;
   color: #fbfbfb;
@@ -76,4 +77,10 @@
 
 .button:hover {
   background-color: rgb(182, 182, 182);
+}
+
+@media only screen and (max-width: $tablet) {
+  .projectCard {
+    padding: 10px;
+  }
 }
