--- a/src/pages/ContactPage.module.scss
+++ b/src/pages/ContactPage.module.scss
@@ -80,9 +80,11 @@
   }
 
   .contactContainer {
-    max-width: unset;
-    width: 100%;
-    flex: none;
+    //max-width: unset;
+    //width: 100%;
+    //flex: none;
+
+    display: none;
   }
 
   .innerTextContainer {
