--- a/src/pages/ProjectsPage.module.scss
+++ b/src/pages/ProjectsPage.module.scss
@@ -33,7 +33,7 @@
 
   .mainContainer {
     justify-content: start;
-    overflow-x: scroll;
+    overflow: scroll;
     padding-right: 14px;
     padding-left: 14px;
   }
