--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -20,7 +20,7 @@
 }
 
 #borderEffect {
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: 100%;
   background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/86186/crt.png);
