--- a/src/components/Pong/Pong.module.scss
+++ b/src/components/Pong/Pong.module.scss
@@ -25,7 +25,7 @@
   color: #3f3;
   font-size: 3rem;
   font-weight: bold;
-  position: fixed;
+  position: absolute;
   width: 100%;
   margin-top: 20px;
   text-shadow: none;
