Using gap instead of margin for flex box projects with exterior padding

--- a/src/components/UI/Project.module.scss
+++ b/src/components/UI/Project.module.scss
@@ -14,7 +14,7 @@
   min-width: 260px;
   color: #fbfbfb;
   border-radius: 4px;
-  margin: 10px;
+  margin: 0;
   padding: 20px;
   flex-direction: column;
   text-align: center;
