--- a/src/components/UI/Project.module.scss
+++ b/src/components/UI/Project.module.scss
@@ -15,7 +15,7 @@
   color: #fbfbfb;
   border-radius: 4px;
   margin: 0;
-  padding: 20px;
+  padding: $small_padding;
   flex-direction: column;
   text-align: center;
 
