--- a/src/pages/LandingPage.module.scss
+++ b/src/pages/LandingPage.module.scss
@@ -66,7 +66,7 @@
 .innerTextContainer {
   width: 75%;
   text-align: left;
-  padding: 20px;
+  padding: $small_padding;
   border-radius: 4px;
 
   background: rgba(255, 255, 255, 0.06);
