--- a/src/pages/ProjectsPage.module.scss
+++ b/src/pages/ProjectsPage.module.scss
@@ -36,6 +36,6 @@
     justify-content: start;
     overflow: scroll;
     gap: 10px;
-    padding: 0 20px 0 20px;
+    padding: 0 $small_padding 0 $small_padding;
   }
 }
