--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -53,7 +53,7 @@
   border-radius: 20px;
 }
 
-@media only screen and (max-width: $tablet) {
+@media only screen and (max-width: 1220px) {
   .contentContainer {
     overflow: visible;
   }
