--- a/src/pages/ProjectsPage.module.scss
+++ b/src/pages/ProjectsPage.module.scss
@@ -25,7 +25,7 @@
   gap: 20px;
 }
 
-@media only screen and (max-width: $tablet) {
+@media only screen and (max-width: 1220px) {
   .pageContainer {
     padding: $small_padding;
     padding-left: 0;
