--- a/src/components/UI/Project.module.scss
+++ b/src/components/UI/Project.module.scss
@@ -84,4 +84,12 @@
     min-height: 400px;
     padding: 10px;
   }
+
+  .projectTitle {
+    font-size: 1rem;
+  }
+
+  .projectDescription {
+    font-size: 0.8rem;
+  }
 }
