--- a/src/components/Forms/ContactForm.module.scss
+++ b/src/components/Forms/ContactForm.module.scss
@@ -178,7 +178,7 @@
 
 @media only screen and (max-width: $tablet) {
   .formWrapper {
-    max-width: unset;
+    max-width: 300px;
     width: 100%;
     height: auto;
     flex: unset;
