Optimised layout for all options on browser

--- a/src/components/UI/Project.module.scss
+++ b/src/components/UI/Project.module.scss
@@ -93,3 +93,10 @@
     font-size: 0.8rem;
   }
 }
+
+@media only screen and (max-height: 600px) {
+  .projectCard {
+    min-height: 400px;
+    padding: 10px;
+  }
+}
