--- a/src/pages/ContactPage.module.scss
+++ b/src/pages/ContactPage.module.scss
@@ -96,3 +96,9 @@
     font-size: 0.8rem;
   }
 }
+
+@media only screen and (max-height: 600px) {
+  .pageContainer {
+    padding: $small_padding;
+  }
+}
