Added image loading for projects page

--- a/src/components/UI/Project.module.scss
+++ b/src/components/UI/Project.module.scss
@@ -26,6 +26,12 @@
   border: 1px solid rgba(255, 255, 255, 0.46);
 }
 
+.loadingText {
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
 .projectImage {
   width: 100%;
   object-fit: cover;
