--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -23,14 +23,11 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/86186/crt.png);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+  box-shadow: inset 0 0 40px #000000;
   z-index: 2;
   border-radius: 20px;
   border: 1px solid;
   pointer-events: none;
-  opacity: 0.8;
 }
 
 .retroEffects::before {
