--- a/src/components/Pong/Pong.module.scss
+++ b/src/components/Pong/Pong.module.scss
@@ -4,7 +4,7 @@
 .court {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 95%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -45,7 +45,7 @@
 .ballWrapper {
   position: absolute;
   width: 100%;
-  height: 100px;
+  height: 12px;
   animation: leftright 4s infinite alternate linear;
 }
 
@@ -76,29 +76,29 @@
 
 @keyframes leftright {
   from {
-    transform: translate(1%, 0);
+    transform: translate(12px, 0);
   }
   to {
-    transform: translate(98%, 0);
+    transform: translate(calc(99% - 12px), 0);
   }
 }
 
 @keyframes smoothbounceball {
   from {
-    transform: translate(0, 5%);
+    transform: translate(0, 0);
   }
   to {
-    transform: translate(0, 95%);
+    transform: translate(0, calc(100% - 12px));
   }
 }
 
 @media only screen and (max-width: $tablet) {
   @keyframes leftright {
     from {
-      transform: translate(1%, 0);
+      transform: translate(0, 0);
     }
     to {
-      transform: translate(95%, 0);
+      transform: translate(100%, 0);
     }
   }
 }
