--- a/src/components/Pong/Pong.module.scss
+++ b/src/components/Pong/Pong.module.scss
@@ -4,7 +4,7 @@
 .court {
   position: absolute;
   width: 100%;
-  height: 95%;
+  height: 94%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -44,7 +44,7 @@
 
 .ballWrapper {
   position: absolute;
-  width: 100%;
+  width: calc(99% - 12px);
   height: 12px;
   animation: leftright 4s infinite alternate linear;
 }
@@ -79,7 +79,7 @@
     transform: translate(12px, 0);
   }
   to {
-    transform: translate(calc(99% - 12px), 0);
+    transform: translate(100%, 0);
   }
 }
 
@@ -95,10 +95,10 @@
 @media only screen and (max-width: $tablet) {
   @keyframes leftright {
     from {
-      transform: translate(0, 0);
+      transform: translate(1%, 0);
     }
     to {
-      transform: translate(100%, 0);
+      transform: translate(99%, 0);
     }
   }
 }
