--- a/src/components/UI/Project.module.scss
+++ b/src/components/UI/Project.module.scss
@@ -27,10 +27,7 @@
 }
 
 .imageContainer {
-  display: flex;
-  flex: 1;
-  justify-content: center;
-  align-items: center;
+  margin-bottom: 20px;
 }
 
 .loadingText {
@@ -46,8 +43,8 @@
 
 .projectContent {
   display: flex;
-  flex: 1;
-  justify-content: center;
+  flex: 1 0 25%;
+  justify-content: space-between;
   align-items: center;
   flex-direction: column;
 }
@@ -55,7 +52,6 @@
 .projectTitle {
   font-size: 1.4rem;
   margin: 0;
-  margin-top: 10px;
 }
 
 .projectStack {
